[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-with-your-photos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "folium>=0.19.0",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.19",
    "ollama>=0.6.1",
    "pandas>=3.0.2",
    "pillow-heif>=1.3.0",
    "pycountry>=24.6.1",
    "reverse-geocoder>=1.5.1",
    "timm>=1.0.26",
    "torch>=2.11.0",
]

[project.scripts]
chatwithyourphotos = "main:main"

[tool.hatch.build.targets.wheel]
include = ["main.py", "agent.py", "setup.py", "utils.py"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
